# freetype2

./: .gitignore  BUILD.bazel  WORKSPACE
src/autofit/: BUILD.bazel
src/base/: BUILD.bazel
src/bdf/: BUILD.bazel
src/bzip2/: BUILD.bazel
src/cache/: BUILD.bazel
src/cff/: BUILD.bazel
src/cid/: BUILD.bazel
src/gxvalid/: BUILD.bazel
src/gzip/: BUILD.bazel
src/lzw/: BUILD.bazel
src/otvalid/: BUILD.bazel
src/pcf/: BUILD.bazel
src/pfr/: BUILD.bazel
src/psaux/: BUILD.bazel
src/pshinter/: BUILD.bazel
src/psnames/: BUILD.bazel
src/raster/: BUILD.bazel
src/sfnt/: BUILD.bazel
src/smooth/: BUILD.bazel
src/tools/: BUILD.bazel
src/truetype/: BUILD.bazel
src/type1/: BUILD.bazel
src/type42/: BUILD.bazel
src/winfonts/: BUILD.bazel
