cc_library(
  name = "gxvalid",
  srcs = ["gxvalid.c"],
  hdrs = glob(["*.h"]) + [
    'gxvbsln.c',
    'gxvcommn.c',
    'gxvfeat.c',
    'gxvjust.c',
    'gxvkern.c',
    'gxvlcar.c',
    'gxvmod.c',
    'gxvmort.c',
    'gxvmort0.c',
    'gxvmort1.c',
    'gxvmort2.c',
    'gxvmort4.c',
    'gxvmort5.c',
    'gxvmorx.c',
    'gxvmorx0.c',
    'gxvmorx1.c',
    'gxvmorx2.c',
    'gxvmorx4.c',
    'gxvmorx5.c',
    'gxvopbd.c',
    'gxvprop.c',
    'gxvtrak.c',
  ],
  deps = ["//:ft2_hdrs"],
  defines = ["FT2_BUILD_LIBRARY", "FT_ADVANCES_H=<freetype/ftadvanc.h>"],
  visibility = ["//:__subpackages__"],
)
