cc_library(
  name = "psaux",
  srcs = ["psaux.c"],
  hdrs = glob(["*.h"]) + [
    'afmparse.c',
    'psauxmod.c',
    'psconv.c',
    'psobjs.c',
    't1cmap.c',
    't1decode.c',
    'cffdecode.c',
    'psarrst.c',
    'psblues.c',
    'pserror.c',
    'psfont.c',
    'psft.c',
    'pshints.c',
    'psintrp.c',
    'psread.c',
    'psstack.c',
  ],
  deps = ["//:ft2_hdrs"],
  defines = ["FT2_BUILD_LIBRARY", "FT_ADVANCES_H=<freetype/ftadvanc.h>"],
  visibility = ["//:__subpackages__"],
)
