cc_library(
  name = "sfnt",
  srcs = ["sfnt.c"],
  hdrs = glob(["*.h"]) + [
    'pngshim.c',
    'sfdriver.c',
    'sfobjs.c',
    'ttbdf.c',
    'ttcmap.c',
    'ttcolr.c',
    'ttcpal.c',
    'ttkern.c',
    'ttload.c',
    'ttmtx.c',
    'ttpost.c',
    'ttsbit.c',
  ],
  deps = ["//:ft2_hdrs"],
  defines = ["FT2_BUILD_LIBRARY", "FT_ADVANCES_H=<freetype/ftadvanc.h>"],
  visibility = ["//:__subpackages__"],
)
